modules/grammars/ide/src/test/resources/cocos/valid/NameFormatModuleType.ide
package valid

typedef module NameFormatModuleType {
    label "Some nice Module Type"
}
