modules/grammars/ide/src/test/resources/cocos/invalid/NameFormatConfigurationType.ide
package invalid

typedef configuration nameFormatConfigurationType {
    label "Some nice Configuration Type"

    frontend task main
}
